ubuntu-release-upgrader (1:19.10.1) UNRELEASED; urgency=medium

  * data/removal_blacklist.cfg: add blacklist entry for postgresql versions
    with two major digits e.g. postgresql-11. (LP: #1825563)

 -- Brian Murray <brian@ubuntu.com>  Mon, 22 Apr 2019 12:54:30 -0700

ubuntu-release-upgrader (1:19.04.16) disco; urgency=medium

  * DistUpgrade/imported/invoke-rc.d: Import the current version of the script
    to fix upgrade failures of packages which only ship upstart and
    systemd units, but no SysV init script. (LP: #1813464)
  * DistUpgrade/imported/invoke-rc.d.diff: update the diff so that it applies
    to the current version of invoke-rc.d.
  * pre-build.sh: actually update invoke-rc.d on a regular basis and try to
    automatically appply the patch.
  * Update of demotions and mirrors data.

 -- Brian Murray <brian@ubuntu.com>  Fri, 12 Apr 2019 10:39:09 -0700

ubuntu-release-upgrader (1:19.04.15) disco; urgency=medium

  * debian/control: build depend on the new version of update-manager which
    supports checking to see if an https url is downloadable. (LP: #1823410)
  * tests/test_sources.list.py: add a test for https support.
  * Update of demotions and mirrors data.
  * DistUpgrade/DistUpgradeQuirks.py: update the deb2snap quirk for disco,
    bump the version of gnome snap, and include the core18 snap.

 -- Brian Murray <brian@ubuntu.com>  Mon, 08 Apr 2019 14:19:29 -0700

ubuntu-release-upgrader (1:19.04.14) disco; urgency=medium

  * DistUpgradeController.py: Instead of checking every sources.list entry to
    see if they are accessible keep track of the uris and only test once per
    uri thereby preventing situations where entries for the same server are
    enabled and disabled. (LP: #1822886)
  * Update of demotions and mirrors data.

 -- Brian Murray <brian@ubuntu.com>  Thu, 04 Apr 2019 17:06:26 -0700

ubuntu-release-upgrader (1:19.04.13) disco; urgency=medium

  [ Brian Murray ]