@@ -2,6 +2,9 @@ ubuntu-release-upgrader (1:19.10.1) UNRELEASED; urgency=medium
 
   * data/removal_blacklist.cfg: add blacklist entry for postgresql versions
     with two major digits e.g. postgresql-11. (LP: #1825563)
+  * Fix broken symbolic link of DistUpgrade/DistUpgrade which caused code from
+    the installed ubuntu-release-upgrader to be used instead of code in the
+    dist-upgrader tarball. (LP: #1824430)
 
  -- Brian Murray <brian@ubuntu.com>  Mon, 22 Apr 2019 12:54:30 -0700
 
